--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ p {
 }
 
 .page-container-auth, .page-container-main {
-  flex-grow: 1; /* 這是關鍵！讓內容區填滿 nav 和 footer 之間的所有空間 */
+  flex-grow: 1; /* 讓內容區填滿 nav 和 footer 之間的所有空間 */
   width: 90%;
   max-width: 1300px; 
   margin: 2rem auto; /* 使用 auto 確保它在 MainLayout 中也能置中 */
@@ -872,14 +872,13 @@ button:hover {
 /* 食譜抽卡頁面內容容器 */
 .recipe-draw-page-content.content-relative {
     position: relative; 
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px; 
-    margin: 0 auto !important;
-    box-sizing: border-box;
+    padding: 20px 20px 20px 20px; 
+    margin: 0 ;
     width: 100%;
-    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box; 
 }
 /* 確保標題和段落置中 */
 .recipe-draw-page-content.content-relative h2,
@@ -916,7 +915,6 @@ button:hover {
     margin: 1 rem auto 0 auto !important;
     align-items: center; 
     width: 100%;
-
     padding: 0;
 }
 
@@ -1000,7 +998,11 @@ button:hover {
     margin: 0.5rem auto 0 auto !important; /* 強制置中 */
     text-align: center !important;
 }
-
+.restaurant-draw-main-content {
+    width: 100%;
+    padding: 20px 20px 20px 20px;
+    box-sizing: border-box;
+}
 .drawn-card.shaking {
     animation: shake 0.6s ease-in-out 1;
 }
